Fix lint in ResultSetAsserter